# start_social

./: .gitignore  README.md  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 78bfba87f901_add_all_the_tables.py  f91e323ffd68_added_address_and_phone_number_to_user.py
app/: config.py  database.py  main.py  models.py  oauth2.py  schemas.py  utils.py
app/routers/: auth.py  post.py  user.py  vote.py
tests/: conftest.py  database.py  test_posts.py  test_users.py
